Fixes to spacing

--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ p.copyright {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
     cursor: pointer;
     padding-left: 0;
     padding-right: 0;
